...
            android:id="@+id/buffer_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#8BC34A"
            android:text="@string/add"
            android:enabled="false"/>

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#43A047"
            android:text="@string/search_recipe"
            android:enabled="false"/>

...
            android:max="100"
            android:backgroundTint="@color/basicWhite"
            android:indeterminateTint="@color/coolingGreen"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/auto_complete_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:completionThreshold="1"
            android:hint="@string/add_ingredient"
            android:textStyle="bold"
...
            android:textColorLink="#000000"
            android:textSize="18sp"
            android:dropDownAnchor="@id/buffer_tv"
            tools:ignore="PrivateResource" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHomeFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:scrollbars="vertical">

...
