...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/freshGreenish">

        <ImageView
            android:id="@+id/ingredient_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="2dp"
            android:contentDescription="@string/image_ingredient" />

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_clear_white_24dp"
            android:contentDescription="@string/image_delete" />

...
