...
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_of_recipe">Image of Recipe</string>
    <string name="favorite_image">Favorite Image</string>
    <string name="e_mail">E-Mail:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="my_name_is_daniel_denk_and_i_am_the_developer_of_this_app_nthis_app_was_developed_during_the_android_development_course_of_via_university">My name is Daniel Denk and I am the developer of this app.\nThis app was developed during the Android Development Course of VIA University.</string>
    <string name="beneath_you_can_see_your_favorite_recipes">Beneath you can see your favorite recipes</string>
...
    <string name="image_delete">Image Delete</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string name="difficulty">Difficulty</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="whatsinmyfridge_nlogin">WhatsInMyFridge</string>
    <string name="i_have_forgotten_my_password">I have forgotten my password</string>
    <string name="login_as_guest">Login as Guest</string>
</resources>

