...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bckgr"
    android:gravity="center"
    android:id="@+id/loginLayout">

    <TextView
        android:id="@+id/titleViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/whatsinmyfridge_nlogin"
...
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="469dp"
        android:background="@drawable/box_rounded"
        />

    <Button
        android:id="@+id/login_guest"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/box_rounded"
        android:gravity="center"
        android:text="@string/login_as_guest"
...
