...
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/buffer_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_input_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/cardview_light_background"
                    android:completionThreshold="1"
                    android:dropDownAnchor="@id/buffer_tv"
...
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/search_heart"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:contentDescription="@string/favorite_image" />

...
