<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_yellow_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/fav"
        android:icon="@drawable/ic_favorite_yellow_24dp"
        android:title="@string/favorites" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_yellow_24dp"
        android:title="@string/search" />
</menu>